appId: com.example.e2eTestDemo
---
- tapOn: "メールアドレス入力"
- inputText: "${USERNAME}"
- tapOn: "パスワード入力"
- inputText: "${PASSWORD}"
- takeScreenshot: InputCredentials
- tapOn: "ログイン"
- assertVisible: "ログインしました"
- takeScreenshot: LoginSuccess
- tapOn: "OK"
- assertNotVisible: "ログインしました"
- takeScreenshot: GoToMap
- assertVisible: "Map Screen"
